--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "web3": "^1.6.1",
+    "web3-eth-contract": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
